@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Vector nelem="2">
+0.0000000e+00
+1.0000000e+00
+</Vector>
+</arts>
