@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Index>
+0
+</Index>
+</arts>
