@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Matrix ncols="2" nrows="2">
+0.0000000e+00 1.0000000e+00
+2.0000000e+00 3.0000000e+00
+</Matrix>
+</arts>
