@@ -1,0 +1,21 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Tensor5 nrows="2" ncols="2" nbooks="2" nshelves="2" npages="2">
+0.0000000e+00 1.0000000e+00
+2.0000000e+00 3.0000000e+00
+4.0000000e+00 5.0000000e+00
+6.0000000e+00 7.0000000e+00
+8.0000000e+00 9.0000000e+00
+1.0000000e+01 1.1000000e+01
+1.2000000e+01 1.3000000e+01
+1.4000000e+01 1.5000000e+01
+1.6000000e+01 1.7000000e+01
+1.8000000e+01 1.9000000e+01
+2.0000000e+01 2.1000000e+01
+2.2000000e+01 2.3000000e+01
+2.4000000e+01 2.5000000e+01
+2.6000000e+01 2.7000000e+01
+2.8000000e+01 2.9000000e+01
+3.0000000e+01 3.1000000e+01
+</Tensor5>
+</arts>
