@@ -1,0 +1,69 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Tensor7 nlibraries="2" nvitrines="2" nrows="2" npages="2" ncols="2" nbooks="2" nshelves="2">
+0.0000000e+00 1.0000000e+00
+2.0000000e+00 3.0000000e+00
+4.0000000e+00 5.0000000e+00
+6.0000000e+00 7.0000000e+00
+8.0000000e+00 9.0000000e+00
+1.0000000e+01 1.1000000e+01
+1.2000000e+01 1.3000000e+01
+1.4000000e+01 1.5000000e+01
+1.6000000e+01 1.7000000e+01
+1.8000000e+01 1.9000000e+01
+2.0000000e+01 2.1000000e+01
+2.2000000e+01 2.3000000e+01
+2.4000000e+01 2.5000000e+01
+2.6000000e+01 2.7000000e+01
+2.8000000e+01 2.9000000e+01
+3.0000000e+01 3.1000000e+01
+3.2000000e+01 3.3000000e+01
+3.4000000e+01 3.5000000e+01
+3.6000000e+01 3.7000000e+01
+3.8000000e+01 3.9000000e+01
+4.0000000e+01 4.1000000e+01
+4.2000000e+01 4.3000000e+01
+4.4000000e+01 4.5000000e+01
+4.6000000e+01 4.7000000e+01
+4.8000000e+01 4.9000000e+01
+5.0000000e+01 5.1000000e+01
+5.2000000e+01 5.3000000e+01
+5.4000000e+01 5.5000000e+01
+5.6000000e+01 5.7000000e+01
+5.8000000e+01 5.9000000e+01
+6.0000000e+01 6.1000000e+01
+6.2000000e+01 6.3000000e+01
+6.4000000e+01 6.5000000e+01
+6.6000000e+01 6.7000000e+01
+6.8000000e+01 6.9000000e+01
+7.0000000e+01 7.1000000e+01
+7.2000000e+01 7.3000000e+01
+7.4000000e+01 7.5000000e+01
+7.6000000e+01 7.7000000e+01
+7.8000000e+01 7.9000000e+01
+8.0000000e+01 8.1000000e+01
+8.2000000e+01 8.3000000e+01
+8.4000000e+01 8.5000000e+01
+8.6000000e+01 8.7000000e+01
+8.8000000e+01 8.9000000e+01
+9.0000000e+01 9.1000000e+01
+9.2000000e+01 9.3000000e+01
+9.4000000e+01 9.5000000e+01
+9.6000000e+01 9.7000000e+01
+9.8000000e+01 9.9000000e+01
+1.0000000e+02 1.0100000e+02
+1.0200000e+02 1.0300000e+02
+1.0400000e+02 1.0500000e+02
+1.0600000e+02 1.0700000e+02
+1.0800000e+02 1.0900000e+02
+1.1000000e+02 1.1100000e+02
+1.1200000e+02 1.1300000e+02
+1.1400000e+02 1.1500000e+02
+1.1600000e+02 1.1700000e+02
+1.1800000e+02 1.1900000e+02
+1.2000000e+02 1.2100000e+02
+1.2200000e+02 1.2300000e+02
+1.2400000e+02 1.2500000e+02
+1.2600000e+02 1.2700000e+02
+</Tensor7>
+</arts>
